--- a/index.html
+++ b/index.html
@@ -1,27 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Portfolio Website Design | Codehal</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My_portfolio</title>
 
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 
     <!-- box icons -->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
 
-    <!-- custom css -->
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
-
+  <body>
     <!-- header design -->
+    <header class="header">
+      <a href="#" class="logo">Portfolio.</a>
+      <nav class="navbar">
+        <a href="#home" class="active">Home</a>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contacts">Contacts</a>
+      </nav>
+
+      <div class="bx bx-moon" id="darkMode-icon"></div>
+    </header>
 
     <!-- home section design -->
+
+    <section class="home" id="home">
+      <div class="home__content">
+        <h3>Hello, I am</h3>
+        <h1>Kseniia Kostromina</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eaque repudiandae iure quidem nostrum suscipit sit necessitatibus aliquam quos repellendus?</p>
+        <div class="social-media">
+          <a href="#"><i class="bx bxl-telegram"></i></a>
+          <a href="#"><i class="bx bxl-github"></i></a>
+          <a href="#"><i class="bx bxl-whatsapp"></i></a>
+        </div>
+        <a href="#" class="btn">Download CV</a>
+      </div>
+      <div class="home__profession">
+        <div class="profession__box">
+          <div class="profession__name" style="--i: 0">
+            <i class="bx bx-code-alt"></i>
+            <h3>Web developer</h3>
+          </div>
+          <div class="profession__name" style="--i: 1">
+            <i class="bx bx-photo-album"></i>
+            <h3>Retoucher</h3>
+          </div>
+          <div class="profession__name" style="--i: 2">
+            <i class="bx bx-camera"></i>
+            <h3>Photographer</h3>
+          </div>
+          <div class="profession__name" style="--i: 3">
+            <i class="bx bx-book-bookmark"></i>
+            <h3>Writer</h3>
+          </div>
+          <div class="circle"></div>
+        </div>
+        <div class="overlay"></div>
+      </div>
+      <!--  <div class="home__img">
+        <img src="img/me.png" alt="" />
+      </div> -->
+    </section>
 
     <!-- about section design -->
 
@@ -35,7 +87,6 @@
 
     <!-- footer design -->
 
-
     <!-- scroll reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
 
@@ -44,6 +95,5 @@
 
     <!-- custom js -->
     <script src="js/script.js"></script>
-</body>
-
+  </body>
 </html>
