--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@
 
     <!-- about section design -->
 
+    <section class="about" id="about">
+      <div class="about__img">
+        <img src="img/aboutme.png" alt="about_me_section" />
+      </div>
+      <div class="about__content">
+        <h2 class="heading">About <span>Me</span></h2>
+        <h3>Hi, I'm here to help Your next project</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque recusandae placeat quas fuga ducimus incidunt eos impedit pariatur, itaque eius.</p>
+        <a href="#" class="btn">Read more</a>
+      </div>
+    </section>
+
     <!-- services section design -->
 
     <!-- portfolio section design -->
