--- a/index.html
+++ b/index.html
@@ -69,25 +69,13 @@
           <div class="circle"></div>
         </div>
         <div class="overlay"></div>
+        <div class="home__img">
+          <img src="img/me3.png" alt="" />
+        </div>
       </div>
-      <!--  <div class="home__img">
-        <img src="img/me.png" alt="" />
-      </div> -->
     </section>
 
     <!-- about section design -->
-
-    <section class="about" id="about">
-      <div class="about__img">
-        <img src="img/aboutme.png" alt="about_me_section" />
-      </div>
-      <div class="about__content">
-        <h2 class="heading">About <span>Me</span></h2>
-        <h3>Hi, I'm here to help Your next project</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque recusandae placeat quas fuga ducimus incidunt eos impedit pariatur, itaque eius.</p>
-        <a href="#" class="btn">Read more</a>
-      </div>
-    </section>
 
     <!-- services section design -->
 
