Made a section Services

--- a/index.html
+++ b/index.html
@@ -77,7 +77,49 @@
 
     <!-- about section design -->
 
+    <section class="about" id="about">
+      <div class="about__img">
+        <img src="img/aboutme.png" alt="about_me_section" />
+      </div>
+      <div class="about__content">
+        <h2 class="heading">About <span>Me</span></h2>
+        <h3>Hi, I'm here to help Your next project</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque recusandae placeat quas fuga ducimus incidunt eos impedit pariatur, itaque eius.</p>
+        <a href="#" class="btn">Read more</a>
+      </div>
+    </section>
+
     <!-- services section design -->
+
+    <section class="services" id="services">
+      <h2 class="heading">My <span>Services</span></h2>
+      <div class="services__container">
+        <div class="services__box">
+          <i class="bx bx-code-alt"></i>
+          <h3>Web Development</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil quia, quas deserunt eaque accusantium architecto consectetur laborum voluptate? Sapiente illo dolorum nisi asperiores ullam possimus qui voluptatem obcaecati laudantium ab?</p>
+          <a href="#" class="btn">Read More</a>
+        </div>
+        <div class="services__box">
+          <i class="bx bx-camera"></i>
+          <h3>Photography</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil quia, quas deserunt eaque accusantium architecto consectetur laborum voluptate? Sapiente illo dolorum nisi asperiores ullam possimus qui voluptatem obcaecati laudantium ab?</p>
+          <a href="#" class="btn">Read More</a>
+        </div>
+        <div class="services__box">
+          <i class="bx bx-photo-album"></i>
+          <h3>Retouch</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil quia, quas deserunt eaque accusantium architecto consectetur laborum voluptate? Sapiente illo dolorum nisi asperiores ullam possimus qui voluptatem obcaecati laudantium ab?</p>
+          <a href="#" class="btn">Read More</a>
+        </div>
+        <div class="services__box">
+          <i class="bx bx-book-bookmark"></i>
+          <h3>Writing</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil quia, quas deserunt eaque accusantium architecto consectetur laborum voluptate? Sapiente illo dolorum nisi asperiores ullam possimus qui voluptatem obcaecati laudantium ab?</p>
+          <a href="#" class="btn">Read More</a>
+        </div>
+      </div>
+    </section>
 
     <!-- portfolio section design -->
 
