Made a section Portfolio

--- a/index.html
+++ b/index.html
@@ -122,6 +122,59 @@
     </section>
 
     <!-- portfolio section design -->
+    <section class="portfolio" id="portfolio">
+      <h2 class="heading">Latest <span>Projects</span></h2>
+      <div class="portfolio__container">
+        <div class="portfolio__box">
+          <img src="img/portfolio1.jpg" alt="portfolio_1" />
+          <div class="portfolio__layer">
+            <h4>Web Development</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere deserunt nisi non alias assumenda, fugit dolore deleniti inventore delectus blanditiis.</p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+        <div class="portfolio__box">
+          <img src="img/portfolio2.jpg" alt="portfolio_1" />
+          <div class="portfolio__layer">
+            <h4>Web Development</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere deserunt nisi non alias assumenda, fugit dolore deleniti inventore delectus blanditiis.</p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+        <div class="portfolio__box">
+          <img src="img/portfolio3.jpg" alt="portfolio_1" />
+          <div class="portfolio__layer">
+            <h4>Web Development</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere deserunt nisi non alias assumenda, fugit dolore deleniti inventore delectus blanditiis.</p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+        <div class="portfolio__box">
+          <img src="img/portfolio4.jpg" alt="portfolio_1" />
+          <div class="portfolio__layer">
+            <h4>Web Development</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere deserunt nisi non alias assumenda, fugit dolore deleniti inventore delectus blanditiis.</p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+        <div class="portfolio__box">
+          <img src="img/portfolio5.jpg" alt="portfolio_1" />
+          <div class="portfolio__layer">
+            <h4>Web Development</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere deserunt nisi non alias assumenda, fugit dolore deleniti inventore delectus blanditiis.</p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+        <div class="portfolio__box">
+          <img src="img/portfolio6.jpg" alt="portfolio_1" />
+          <div class="portfolio__layer">
+            <h4>Web Development</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere deserunt nisi non alias assumenda, fugit dolore deleniti inventore delectus blanditiis.</p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- testimonial design -->
 
