Made a feedbacks-slider

--- a/index.html
+++ b/index.html
@@ -178,6 +178,34 @@
 
     <!-- testimonial design -->
 
+    <div class="feedbacks__container">
+      <h2 class="heading">Valuable <span>Feedbacks</span></h2>
+      <div class="feedbacks__wrapper">
+        <div class="feedbacks__box swiper mySwiper">
+          <div class="feedbacks__content swiper-wrapper">
+            <div class="feedbacks__slide swiper-slide">
+              <img src="img/testimonial1.jpg" alt="feedback1" />
+              <h3>Tom Mayer</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores consequatur hic delectus, molestias at reprehenderit.</p>
+            </div>
+            <div class="feedbacks__slide swiper-slide">
+              <img src="img/testimonial2.jpg" alt="feedback1" />
+              <h3>Olivia Beck</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores consequatur hic delectus, molestias at reprehenderit.</p>
+            </div>
+            <div class="feedbacks__slide swiper-slide">
+              <img src="img/testimonial3.jpg" alt="feedback1" />
+              <h3>Andre Packson</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores consequatur hic delectus, molestias at reprehenderit.</p>
+            </div>
+          </div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </div>
+
     <!-- contact section design -->
 
     <!-- footer design -->
