--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#portfolio">Portfolio</a>
-        <a href="#contacts">Contacts</a>
+        <a href="#contact">Contact</a>
       </nav>
 
       <div class="bx bx-moon" id="darkMode-icon"></div>
@@ -224,6 +224,16 @@
     </section>
 
     <!-- footer design -->
+    <footer class="footer">
+      <div class="footer__text">
+        <p>Copyright &copy; 2025 by KseniiaKo | All Rights Reserved</p>
+      </div>
+      <div class="footer__iconTop">
+        <a href="#home">
+          <i class="bx bx-up-arrow-alt"></i>
+        </a>
+      </div>
+    </footer>
 
     <!-- scroll reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
