--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <a href="#" class="logo">Portfolio.</a>
       <nav class="navbar">
         <a href="#home" class="active">Home</a>
-        <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+        <a href="#contacts">Contact</a>
       </nav>
 
       <div class="bx bx-moon" id="darkMode-icon"></div>
@@ -72,20 +72,6 @@
         <div class="home__img">
           <img src="img/me3.png" alt="" />
         </div>
-      </div>
-    </section>
-
-    <!-- about section design -->
-
-    <section class="about" id="about">
-      <div class="about__img">
-        <img src="img/aboutme.png" alt="about_me_section" />
-      </div>
-      <div class="about__content">
-        <h2 class="heading">About <span>Me</span></h2>
-        <h3>Hi, I'm here to help Your next project</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque recusandae placeat quas fuga ducimus incidunt eos impedit pariatur, itaque eius.</p>
-        <a href="#" class="btn">Read more</a>
       </div>
     </section>
 
@@ -205,6 +191,20 @@
         </div>
       </div>
     </div>
+
+    <!-- about section design -->
+
+    <section class="about" id="about">
+      <div class="about__img">
+        <img src="img/aboutme2.png" alt="about_me_section" />
+      </div>
+      <div class="about__content">
+        <h2 class="heading">About <span>Me</span></h2>
+        <h3>Hi, I'm here to help Your next project</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque recusandae placeat quas fuga ducimus incidunt eos impedit pariatur, itaque eius.</p>
+        <a href="#" class="btn">Read more</a>
+      </div>
+    </section>
 
     <!-- contact section design -->
     <section class="contacts" id="contacts">
