filled the site with information

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="home__content">
         <h3>Hello, I am</h3>
         <h1>Kseniia Kostromina</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eaque repudiandae iure quidem nostrum suscipit sit necessitatibus aliquam quos repellendus?</p>
+        <p>Сreate modern, functional, and user-friendly websites. Make the web space beautiful and intuitive for customers.</p>
         <div class="social-media">
           <a href="#"><i class="bx bxl-telegram"></i></a>
           <a href="#"><i class="bx bxl-github"></i></a>
@@ -85,26 +85,38 @@
         <div class="services__box">
           <i class="bx bx-code-alt"></i>
           <h3>Web Development</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil quia, quas deserunt eaque accusantium architecto consectetur laborum voluptate? Sapiente illo dolorum nisi asperiores ullam possimus qui voluptatem obcaecati laudantium ab?</p>
-          <a href="#" class="btn">Read More</a>
+          <p>
+            Сreate modern, functional, and user-friendly websites that meet your specific needs. From simple landing pages to more complex web applications, I use the latest technologies like HTML, CSS, JavaScript, and popular frameworks to build responsive and fast websites. My goal is to make sure
+            your website works well on all devices, is easy to navigate, and helps your business grow.
+          </p>
+          <!--  <a href="#" class="btn">Read More</a> -->
         </div>
         <div class="services__box">
           <i class="bx bx-camera"></i>
           <h3>Photography</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil quia, quas deserunt eaque accusantium architecto consectetur laborum voluptate? Sapiente illo dolorum nisi asperiores ullam possimus qui voluptatem obcaecati laudantium ab?</p>
-          <a href="#" class="btn">Read More</a>
+          <p>
+            Capturing moments through photography allows me to explore different perspectives and experiment with light, composition, and creativity. Whether it's nature, architecture, or candid shots, I enjoy finding beauty in everyday life and turning it into art. Photography for me is a way to
+            express myself and document the world around me in a personal and unique way.
+          </p>
+          <!--  <a href="#" class="btn">Read More</a> -->
         </div>
         <div class="services__box">
           <i class="bx bx-photo-album"></i>
           <h3>Retouch</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil quia, quas deserunt eaque accusantium architecto consectetur laborum voluptate? Sapiente illo dolorum nisi asperiores ullam possimus qui voluptatem obcaecati laudantium ab?</p>
-          <a href="#" class="btn">Read More</a>
+          <p>
+            I am a passionate photo retoucher, dedicated to enhancing and perfecting images to bring out their full potential. Whether it's portrait retouching, color correction, or removing imperfections. Retouching allows me to creatively refine photos and create visually stunning images that
+            truly stand out.
+          </p>
+          <!--  <a href="#" class="btn">Read More</a> -->
         </div>
         <div class="services__box">
           <i class="bx bx-book-bookmark"></i>
           <h3>Writing</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil quia, quas deserunt eaque accusantium architecto consectetur laborum voluptate? Sapiente illo dolorum nisi asperiores ullam possimus qui voluptatem obcaecati laudantium ab?</p>
-          <a href="#" class="btn">Read More</a>
+          <p>
+            I love expressing myself through writing. Enjoy crafting stories, whether they are short tales or longer novellas. Writing allows me to dive into different worlds, explore complex characters, and bring unique ideas to life. It's a creative outlet that helps me unwind and share my
+            imagination with others.
+          </p>
+          <!-- <a href="#" class="btn">Read More</a> -->
         </div>
       </div>
     </section>
@@ -174,17 +186,23 @@
             <div class="feedbacks__slide swiper-slide">
               <img src="img/testimonial1.jpg" alt="feedback1" />
               <h3>Tom Mayer</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores consequatur hic delectus, molestias at reprehenderit.</p>
+              <p>
+                "Ksenia is a nice web developer who who blends technical knowledge with creativity. She delivered our project ahead of schedule, and the final result exceeded our expectations. Her ability to understand our needs and translate them into a functional, user-friendly website was
+                impressive. Highly recommend her!"
+              </p>
             </div>
             <div class="feedbacks__slide swiper-slide">
               <img src="img/testimonial2.jpg" alt="feedback1" />
               <h3>Olivia Beck</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores consequatur hic delectus, molestias at reprehenderit.</p>
+              <p>"Working with Ksenia was a pleasure. She not only developed a beautiful website for our business but also solved several complex issues we encountered along the way. Her attention to detail and commitment to quality made a significant impact on the success of our project."</p>
             </div>
             <div class="feedbacks__slide swiper-slide">
               <img src="img/testimonial3.jpg" alt="feedback1" />
               <h3>Andre Packson</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores consequatur hic delectus, molestias at reprehenderit.</p>
+              <p>
+                "Ksenia is a talented developer and a great team player. Throughout the project, she kept us informed at every stage and welcomed feedback with a positive attitude. The result was a website that perfectly reflected our brand and values. I look forward to collaborating with her
+                again!"
+              </p>
             </div>
           </div>
           <div class="swiper-button-next"></div>
@@ -203,8 +221,9 @@
       <div class="about__content">
         <h2 class="heading">About <span>Me</span></h2>
         <h3>Hi, I'm here to help Your next project</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque recusandae placeat quas fuga ducimus incidunt eos impedit pariatur, itaque eius.</p>
-        <a href="#" class="btn">Read more</a>
+        <p>Web development is my passion. I use the latest technologies and approaches in development, such as HTML5, CSS3, JavaScript, and React.js, to build dynamic and responsive web applications. Every project is an opportunity to create something unique that will delight users.</p>
+        <p>If you have an interesting project or would like to discuss potential collaboration, feel free to contact me! I'm always excited about new challenges and ready to help create something amazing 🌻</p>
+        <!-- <a href="#" class="btn">Read more</a> -->
       </div>
     </section>
 
