made some edits

--- a/index.html
+++ b/index.html
@@ -202,10 +202,7 @@
             <div class="feedbacks__slide swiper-slide">
               <img src="img/testimonial1.jpg" alt="feedback1" />
               <h3>Tom Mayer</h3>
-              <p>
-                "Ksenia is a nice web developer who who blends technical knowledge with creativity. She delivered our project ahead of schedule, and the final result exceeded our expectations. Her ability to understand our needs and translate them into a functional, user-friendly website was
-                impressive. Highly recommend her!"
-              </p>
+              <p>"Ksenia is a nice web developer who who blends technical knowledge with creativity. She delivered our project ahead of schedule, and the final result exceeded our expectations. Highly recommend her!"</p>
             </div>
             <div class="feedbacks__slide swiper-slide">
               <img src="img/testimonial2.jpg" alt="feedback1" />
