--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <h1>Kseniia Kostromina</h1>
         <p>Сreate modern, functional, and user-friendly websites. Make the web space beautiful and intuitive for customers.</p>
         <div class="social-media">
-          <a href="#"><i class="bx bxl-telegram"></i></a>
-          <a href="#"><i class="bx bxl-github"></i></a>
+          <a href="https://t.me/Aksi1234"><i class="bx bxl-telegram"></i></a>
+          <a href="https://github.com/Aksi12344321"><i class="bx bxl-github"></i></a>
           <a href="#"><i class="bx bxl-whatsapp"></i></a>
         </div>
         <a href="#" class="btn">Download CV</a>
