added investment calculator project to portfolio

--- a/index.html
+++ b/index.html
@@ -142,11 +142,14 @@
       <h2 class="heading">Latest <span>Projects</span></h2>
       <div class="portfolio__container">
         <div class="portfolio__box">
-          <img src="img/portfolio1.jpg" alt="portfolio_1" />
+          <img src="img/Investment_calculator.jpg" alt="portfolio_1" />
           <div class="portfolio__layer">
             <h4>Web Development</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere deserunt nisi non alias assumenda, fugit dolore deleniti inventore delectus blanditiis.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <p>
+              <b>Investment Calculator</b> is a user-friendly tool for estimating investment returns. The application allows users to input their investment amount, interest return, and investment period, then instantly calculates the expected monthly payouts. With an intuitive interface, it makes
+              financial planning easy and accessible.
+            </p>
+            <a href="https://aksi12344321.github.io/Investment-Calculator/"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
         <div class="portfolio__box">
