добавлен проект генератор случайной цитаты

--- a/index.html
+++ b/index.html
@@ -149,15 +149,15 @@
               <b>Investment Calculator</b> is a user-friendly tool for estimating investment returns. The application allows users to input their investment amount, interest return, and investment period, then instantly calculates the expected monthly payouts. With an intuitive interface, it makes
               financial planning easy and accessible.
             </p>
-            <a href="https://aksi12344321.github.io/Investment-Calculator/"><i class="bx bx-link-external"></i></a>
+            <a href="https://aksi12344321.github.io/Investment-Calculator/" target="_blank"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
         <div class="portfolio__box">
-          <img src="img/portfolio2.jpg" alt="portfolio_1" />
+          <img src="img/Random_quote_generator.jpg" alt="portfolio_2" />
           <div class="portfolio__layer">
             <h4>Web Development</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere deserunt nisi non alias assumenda, fugit dolore deleniti inventore delectus blanditiis.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <p><b>Random Quote Generator</b> is a simple web application that provides random quotes every time you click a button. The app fetches quotes from an external API and displays them in an attractive and user-friendly interface.</p>
+            <a href="https://aksi12344321.github.io/Random-quote-generator" target="_blank"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
         <div class="portfolio__box">
